--- a/ME314_midterm_assignment.html
+++ b/ME314_midterm_assignment.html
@@ -657,9 +657,9 @@ covariates you included in (a) before but here also add
 to leave the EU for every observation in the data. For how many
 observations is this probability greater than .5?</h4>
 </div>
-<div id="e.-which-countries-have-respondents-with-a-probability-of-voting-to-leave-of-greater-than-.5-according-to-your-model-in-part-c" class="section level4">
+<div id="e.-which-countries-have-respondents-with-a-probability-of-voting-to-leave-of-greater-than-.5-according-to-your-model-in-part-d" class="section level4">
 <h4>e. Which countries have respondents with a probability of voting to
-leave of greater than .5 (according to your model in part c)?</h4>
+leave of greater than .5 (according to your model in part d)?</h4>
 </div>
 </div>
 </div>
